# encrust

./: .gitignore  Cargo.toml  README.md
.zread/wiki/: current
.zread/wiki/versions/2026-04-24-140458/: 1-xiang-mu-gai-shu-encrust-jia-mi-ying-yong-de-she-ji-mu-biao-yu-gong-neng-zong-lan.md  10-jia-mi-gong-zuo-liu-ui-wen-jian-xuan-ze-wen-ben-shu-ru-shu-chu-lu-jing-yu-cao-zuo-hong-fa.md  11-jie-mi-gong-zuo-liu-ui-jia-mi-wen-jian-shu-ru-jie-guo-zhan-shi-yu-wen-jian-bao-cun.md  12-tuo-zhuai-wen-jian-bu-huo-ji-zhi-capture_dropped_files-yu-egui-shu-ru-shi-jian.md  13-toast-tong-zhi-xi-tong-cheng-gong-cuo-wu-zhuang-tai-fan-kui-yu-zi-dong-xiao-shi.md  14-min-gan-shu-ju-qing-li-ce-lue-cao-zuo-wan-cheng-hou-de-zhuang-tai-zhong-zhi-yu-mi-yao-qing-chu.md  15-ming-an-shuang-zhu-ti-pei-se-fang-an-themecolors-jie-gou-ti-yu-theme_colors-han-shu.md  16-quan-ju-yang-shi-pei-zhi-jian-ju-yuan-jiao-kong-jian-zhuang-tai-de-shi-jue-zhi-xing-apply_app_style.md  17-cjk-zi-ti-hui-tui-ji-zhi-kua-ping-tai-zhong-wen-zi-ti-jian-ce-yu-zhu-ce.md  18-wen-jian-du-xie-feng-zhuang-yu-mo-ren-lu-jing-sheng-cheng-ce-lue.md  19-mi-ma-xue-mo-kuai-de-dan-yuan-ce-shi-she-ji-zheng-xiang-liu-cheng-fan-xiang-mi-yao-yu-ge-shi-xiao-yan.md  2-kuai-su-shang-shou-huan-jing-da-jian-yun-xing-yu-gou-jian.md  20-kua-ping-tai-gou-jian-jiao-ben-macos-linux-windows-yu-release-gou-jian.md  wiki.json  (+8 more)
assets/appicon/: appicon.icns
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1
src/: app.rs  crypto.rs  io.rs  main.rs
src/crypto/: decrypt.rs  encrypt.rs  error.rs  format.rs  kdf.rs  suite.rs  tests.rs  types.rs
(+23 files in other folders)
