[package]
name = "encrust"
version = "0.1.0"
edition = "2024"
description = "跨平台桌面加密工具"

[package.metadata.bundle]
name = "Encrust"
identifier = "com.encrust.app"
icon = ["assets/appicon/appicon.icns"]

copyright = ""
category = "public.app-category.utilities"
short_description = "跨平台桌面加密工具"
long_description = "基于 AES-256-GCM / ChaCha20-Poly1305 的文件与文本加密应用"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
chacha20poly1305 = "0.10"
eframe = "0.31"
rfd = "0.15"
rand_core = { version = "0.6", features = ["getrandom"] }
sm4 = "0.5.1"
thiserror = "2.0"
zeroize = "1.8"
image = { version = "0.25", default-features = false, features = ["png"] }
